--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.33</version>
     </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>StockSim</finalName>
