--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,26 @@
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.thymeleaf</groupId>
+    	<artifactId>thymeleaf</artifactId>
+    	<version>2.1.3.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.thymeleaf</groupId>
+    	<artifactId>thymeleaf-spring4</artifactId>
+    	<version>2.1.3.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>nz.net.ultraq.thymeleaf</groupId>
+    	<artifactId>thymeleaf-layout-dialect</artifactId>
+    	<version>1.2.7</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.thymeleaf.extras</groupId>
+    	<artifactId>thymeleaf-extras-springsecurity3</artifactId>
+    	<version>2.1.1.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>StockSim</finalName>
