--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,6 @@
     	<version>1.2</version>
     </dependency>
     <dependency>
-    	<groupId>mysql</groupId>
-    	<artifactId>mysql-connector-java</artifactId>
-    	<version>5.1.33</version>
-    </dependency>
-    <dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
@@ -83,6 +78,11 @@
     	<groupId>org.thymeleaf.extras</groupId>
     	<artifactId>thymeleaf-extras-springsecurity3</artifactId>
     	<version>2.1.1.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mariadb.jdbc</groupId>
+    	<artifactId>mariadb-java-client</artifactId>
+    	<version>1.1.7</version>
     </dependency>
   </dependencies>
   <build>
