--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,6 @@
     	<version>1.2</version>
     </dependency>
     <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>javax.servlet-api</artifactId>
-    	<version>3.1.0</version>
-    </dependency>
-    <dependency>
     	<groupId>org.thymeleaf</groupId>
     	<artifactId>thymeleaf</artifactId>
     	<version>2.1.3.RELEASE</version>
@@ -83,6 +78,11 @@
     	<groupId>org.mariadb.jdbc</groupId>
     	<artifactId>mariadb-java-client</artifactId>
     	<version>1.1.7</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.3.1</version>
     </dependency>
   </dependencies>
   <build>
