--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
     	<artifactId>gson</artifactId>
     	<version>2.3.1</version>
     </dependency>
+    <dependency>
+    	<groupId>com.sun.mail</groupId>
+    	<artifactId>javax.mail</artifactId>
+    	<version>1.5.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>StockSim</finalName>
