--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
     	<artifactId>javax.mail</artifactId>
     	<version>1.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>StockSim</finalName>
