--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>StockSim</finalName>
