Rewriting dockerfile to fix line endings

--- a/src/StockSim/Dockerfile
+++ b/src/StockSim/Dockerfile
@@ -1,11 +1,10 @@
-﻿FROM microsoft/aspnet:1.0.0-beta8-coreclr
+FROM microsoft/aspnet:1.0.0-rc1-final-coreclr
 
 COPY . /app
 WORKDIR /app
 RUN ["dnu", "restore"]
 RUN ["apt-get", "-y", "update"]
 RUN ["apt-get", "-y", "install", "sqlite3", "libsqlite3-dev"]
-
 
 EXPOSE 5004
 ENTRYPOINT ["dnx", "-p", "project.json", "kestrel"]
