--- a/src/StockSim/project.json
+++ b/src/StockSim/project.json
@@ -17,6 +17,7 @@
       "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
       "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
       "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
+      "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
       "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
       "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final"
    },
