--- a/src/StockSim/project.json
+++ b/src/StockSim/project.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "EntityFramework.Commands": "7.0.0-rc1-final",
       "EntityFramework.Sqlite": "7.0.0-rc1-final",
+      "MailKit": "1.3.0-beta2",
       "Microsoft.AspNet.Authentication.Cookies": "1.0.0-rc1-final",
       "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
       "Microsoft.AspNet.Diagnostics.Entity": "7.0.0-rc1-final",
