--- a/src/StockSim/project.json
+++ b/src/StockSim/project.json
@@ -24,7 +24,8 @@
       "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
       "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
       "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-      "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final"
+      "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
+      "System.Xml.XmlDocument": "4.0.1-beta-23409"
    },
    "commands": {
       "web": "Microsoft.AspNet.Server.Kestrel",
